# lingmo-screenshots

./: CMakeLists.txt
.github/workflows/: package.yml
debian/: changelog  control  copyright
rpm/: lingmo-screenshots.spec
src/: main.cpp
